jmeter-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tqa
